# DL_project_20251

./: Diffusion_model.py  README.md  requirements.txt
GAN_doubleconv_PatchGAN/: config.py  dataset.py  detect.py  inference.py  plot_metrics.py  test.py
GAN_doubleconv_PatchGAN/results/: validation_results.txt
GAN_doubleconv_PatchGAN/results/plots/: training_statistics.txt
GANsformer/: main.py  pyproject.toml
GANsformer/src/models/: bipartite.py
GANsformer/src/training/: trainer.py
ImprovedPremiumGAN_celeba/: config.py  prepare_masked_dataset.py  train.py  validate.py
ImprovedPremiumGAN_celeba/results/: train_log.csv
PartialConvGan/: deeplearning.code-workspace  particonv.ipynb  requirements.txt  run_validation.py  tempCodeRunnerFile.py
PartialConvGan/dataset/: dataset.py  testset.py
PartialConvGan/models/: pconv_unet.py  perceptual.py
PartialConvGan/validation/: fid_utils.py  metrics.py
phn/: .gitignore  README.md  requirements.txt
phn/src/config/: config.py
phn/src/dataloader/: __init__.py  loader.py
phn/src/models/: __init__.py  discriminator.py  generator.py
